fix gap in filters section

--- a/src/style/partials/components/section.scss
+++ b/src/style/partials/components/section.scss
@@ -20,7 +20,7 @@
       padding: 0 15px;
     }
 
-    @media (min-width: 960px) {
+    @media (min-width: 640px) {
       margin: 0 -30px;
 
       &>.section__container {
